<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_movies">Movies</string>
    <string name="title_ticket">Ticket</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_information">Edit Information</string>
    <string name="notifications">Notifications</string>
    <string name="lookupinformation">Look up information</string>
    <string name="todo">TODO</string>
    <string name="history_booking">History Booking</string>
    <string name="about">About</string>
    <string name="welcomeback_user">Welcome Back, User</string>
    <string name="log_out">Log Out</string>
    <string name="location_near_you">Cinemas Near You</string>
    <string name="title_location">Location</string>


</resources>