<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.example.myapplication.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_ticket"
        android:name="com.example.myapplication.ui.ticket.TicketFragment"
        android:label="@string/title_ticket"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>