<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtview_HiUser"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/welcomeback_user"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#CDDEF6"
                android:textDirection="firstStrongRtl"
                android:textIsSelectable="false"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="98dp"
                android:layout_height="80dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:background="#1E88E5"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <Button
                android:id="@+id/edit_info"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/edittext_background"
                android:text="@string/edit_information" />

            <Button
                android:id="@+id/lookup_info"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/edittext_background"
                android:text="@string/lookupinformation" />

            <Button
                android:id="@+id/button_hisbooking"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/edittext_background"
                android:text="@string/history_booking" />

            <Button
                android:id="@+id/button_about"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/edittext_background"
                android:text="@string/about" />

            <Button
                android:id="@+id/button_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="158dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/orange_button_background"
                android:text="@string/log_out"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>